[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.195"